--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -270,7 +270,7 @@ StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,
 ApplyZoneEffect_2=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 ApplyZoneEffect=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,
 BP_CollectibleKey_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
-BP_Door_C=
+BP_Door_C=StaticMeshActor.Rendering.TextureStreaming,
 BPC_GravityGun_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 BP_GravityTargetBase_C=
 ActivatePhysics_10=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
@@ -278,7 +278,7 @@ ActivatePhysics=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_Explosion_C=
 BP_ExplosiveBarrel_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,StaticMeshActor.Rendering.TextureStreaming,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BP_StickyPlatform_C=
-BP_GameFlowManager_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
+BP_GameFlowManager_C=
 WBP_GameFlowUI_C=
 SetupEndUI_4=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
 SetupEndUI=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,
@@ -286,7 +286,7 @@ ToDoubleDigits_5=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Text
 ToDoubleDigits=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 PlayerController=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 StaticMeshComponent=StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
-BP_ObjectiveManager_C=
+BP_ObjectiveManager_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,
 WBP_ObjectiveUI_C=
 UserDefinedStruct=UserDefinedStruct.Structure.9FF0C2A94F321A0308EBD68677967733,
 K2Node_BreakStruct=K2Node_BreakStruct.PinOptions.ShowPinForProperties,
@@ -299,14 +299,13 @@ ToDoubleDigits_3=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Text
 LastLevel=/Game/Levels/Bootstrap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
+OpenAssetsAtExit=/Game/LDis/Triggers/BP_Door.BP_Door
+OpenAssetsAtExit=/Game/LDis/Triggers/BP_Key.BP_Key
+OpenAssetsAtExit=/Game/LDis/Triggers/_Base/BP_CollectibleBase.BP_CollectibleBase
 OpenAssetsAtExit=/Game/Objectives/_Widgets/WBP_ObjectiveUI.WBP_ObjectiveUI
 OpenAssetsAtExit=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager
-OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
-OpenAssetsAtExit=/Game/Interfaces/IObjectiveTarget.IObjectiveTarget
-OpenAssetsAtExit=/Game/LDis/Triggers/BP_Door.BP_Door
-OpenAssetsAtExit=/Game/LDis/Triggers/_Base/BP_CollectibleBase.BP_CollectibleBase
-OpenAssetsAtExit=/Game/LDis/Triggers/BP_Key.BP_Key
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1300,6 +1299,7 @@ WBP_GameFlowUI_C.Localization=True
 BP_GameFlowManager_C.Default=True
 BP_GameFlowManager_C.Game Flow Manager=True
 BP_GameFlowManager_C.Game Flow Manager=True
+BP_GameFlowManager_C.Game Flow Manager=True
 WBP_GameFlowUI_C.Default=True
 WBP_GameFlowUI_C.Designer=True
 WBP_GameFlowUI_C.Layout=True
@@ -1368,10 +1368,9 @@ WBP_ObjectiveUI_C.Accessibility=True
 WBP_ObjectiveUI_C.Clipping=True
 WBP_ObjectiveUI_C.Navigation=True
 WBP_ObjectiveUI_C.Localization=True
-BP_ObjectiveManager_C.Objective Manager =True
-BP_ObjectiveManager_C.ObjectiveManager =True
+BP_ObjectiveManager_C.Objective Manager=True
+BP_ObjectiveManager_C.ObjectiveManager=True
 MovieSceneKeyStructType_0.Key=True
-BP_GameFlowManager_C.Game Flow Manager =True
 Widget.Layout=True
 Widget.Behavior=True
 Widget.Accessibility=True
@@ -1403,6 +1402,9 @@ BP_ObjectiveManager_C.TransformCommon=True
 BP_Key_C.TransformCommon=True
 BP_Key_C.LOD=True
 BP_Key_C.Cooking=True
+BP_GameFlowManager_C.Game Flow Manager =True
+BP_ObjectiveManager_C.Objective Manager =True
+BP_ObjectiveManager_C.ObjectiveManager =True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1505,7 +1507,7 @@ SteamVREditorSettings=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.Pow2GridIntervals\" \"Object.GridSnapping.DivisionsOf360RotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 PersonaOptions="\"Object.Preview Scene.Preview Scene|AdditionalMesh\" "
@@ -1517,8 +1519,8 @@ Character=
 Pawn=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Console.ConsoleKeys\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BP_PlayerController_C=
 PlayerController=
 Controller=
@@ -1572,23 +1574,23 @@ MaterialExpressionScalarParameter="\"Object.DefaultValue\" "
 BP_ExplosiveBarrel_C=
 BP_GameFlowManager_C=
 Image="\"Object.Appearance.Brush\" "
-Widget=
-Visual=
+Widget="\"Object.ObjectiveManagerRef\" "
+Visual="\"Object.ObjectiveManagerRef\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
 PanelWidget=
 WBP_GameFlowUI_C=
-UserWidget=
+UserWidget="\"Object.ObjectiveManagerRef\" "
 SetupEndUI_4="\"Struct.L_mainColor\" "
 SetupEndUI=
 ToDoubleDigits_5="\"Struct.L_integerString\" "
 ToDoubleDigits=
 CapsuleComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-BP_ObjectiveManager_C=
+BP_ObjectiveManager_C="\"Object.Objective Manager .Objectives\" \"Object.Objective Manager .Objectives.Objectives[0]\" "
 HorizontalBox=
-WBP_ObjectiveUI_C=
+WBP_ObjectiveUI_C="\"Object.ObjectiveManagerRef\" "
 BP_Door_C=
 BP_TriggerPlayerBase_C=
 BP_TriggerBase_C=
@@ -1641,7 +1643,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Objectives/_Widgets
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1651,19 +1653,19 @@ ContentBrowserTab1.CurrentViewType=1
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/bootstrap
 MRUItem1=/Game/Levels/Level_01
-MRUItem2=/Game/LDis/Triggers/BP_Key
-MRUItem3=/Game/LDis/Triggers/_Base/BP_CollectibleBase
-MRUItem4=/Game/LDis/Triggers/BP_Door
-MRUItem5=/Game/Interfaces/IObjectiveTarget
-MRUItem6=/Game/_Core/BP_GameFlowManager
-MRUItem7=/Game/Objectives/BP_ObjectiveManager
-MRUItem8=/Game/Objectives/_Widgets/WBP_ObjectiveUI
-MRUItem9=/Game/Objectives/_Enums/EObjectiveManagerState
-MRUItem10=/Game/Objectives/_Structs/FObjectiveData
-MRUItem11=/Game/Player/BP_Player
-MRUItem12=/Game/_Core/BP_StartPosition
-MRUItem13=/Game/Levels/Level_03
-MRUItem14=/Game/Levels/Level_02
+MRUItem2=/Game/Levels/Level_02
+MRUItem3=/Game/Objectives/BP_ObjectiveManager
+MRUItem4=/Game/Objectives/_Widgets/WBP_ObjectiveUI
+MRUItem5=/Game/LDis/Triggers/_Base/BP_CollectibleBase
+MRUItem6=/Game/LDis/Triggers/BP_Key
+MRUItem7=/Game/LDis/Triggers/BP_Door
+MRUItem8=/Game/Interfaces/IObjectiveTarget
+MRUItem9=/Game/_Core/BP_GameFlowManager
+MRUItem10=/Game/Objectives/_Enums/EObjectiveManagerState
+MRUItem11=/Game/Objectives/_Structs/FObjectiveData
+MRUItem12=/Game/Player/BP_Player
+MRUItem13=/Game/_Core/BP_StartPosition
+MRUItem14=/Game/Levels/Level_03
 MRUItem15=/Game/_Core/_Widgets/WBP_GameFlowUI
 MRUItem16=/Game/Levels/Level_Gym
 MRUItem17=/Game/_Core/_Data/_Material/M_StartPosition
@@ -1705,6 +1707,9 @@ MRUItem19=/Game/LDis/GravityTargets/BP_StickyPlatform
 /Game/Objectives/_Enums/EObjectiveManagerState.EObjectiveManagerState=1
 /Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager=1
 /Game/Objectives/_Widgets/WBP_ObjectiveUI.WBP_ObjectiveUI=1
+/Game/Interfaces/IObjectiveTarget.IObjectiveTarget=1
+/Game/LDis/Triggers/BP_Key.BP_Key=1
+/Game/LDis/Triggers/_Base/BP_CollectibleBase.BP_CollectibleBase=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1745,8 +1750,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
-RecentlyPlaced=/Game/LDis/Triggers/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager;
+RecentlyPlaced=/Game/LDis/Triggers/BP_Key.BP_Key;
 RecentlyPlaced=/Game/_Core/BP_StartPosition.BP_StartPosition;
 RecentlyPlaced=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager;
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
@@ -2753,7 +2758,7 @@ RemoveLevelWarning=False
 
 [WidgetTemplatesExpanded]
 Editor=False
-Input=False
+Input=True
 Lists=False
 Misc=False
 Optimization=False
