--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -296,16 +296,10 @@ SetObjective=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureS
 ToDoubleDigits_3=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,
 
 [EditorStartup]
-LastLevel=/Game/Levels/Bootstrap
+LastLevel=/Game/Levels/Level_Gym
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager
-OpenAssetsAtExit=/Game/LDis/Triggers/BP_Door.BP_Door
-OpenAssetsAtExit=/Game/LDis/Triggers/BP_Key.BP_Key
-OpenAssetsAtExit=/Game/LDis/Triggers/_Base/BP_CollectibleBase.BP_CollectibleBase
-OpenAssetsAtExit=/Game/Objectives/_Widgets/WBP_ObjectiveUI.WBP_ObjectiveUI
-OpenAssetsAtExit=/Game/Objectives/BP_ObjectiveManager.BP_ObjectiveManager
+CleanShutdown=False
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1300,6 +1294,7 @@ BP_GameFlowManager_C.Default=True
 BP_GameFlowManager_C.Game Flow Manager=True
 BP_GameFlowManager_C.Game Flow Manager=True
 BP_GameFlowManager_C.Game Flow Manager=True
+BP_GameFlowManager_C.Game Flow Manager=True
 WBP_GameFlowUI_C.Default=True
 WBP_GameFlowUI_C.Designer=True
 WBP_GameFlowUI_C.Layout=True
@@ -1369,6 +1364,8 @@ WBP_ObjectiveUI_C.Clipping=True
 WBP_ObjectiveUI_C.Navigation=True
 WBP_ObjectiveUI_C.Localization=True
 BP_ObjectiveManager_C.Objective Manager=True
+BP_ObjectiveManager_C.Objective Manager=True
+BP_ObjectiveManager_C.ObjectiveManager=True
 BP_ObjectiveManager_C.ObjectiveManager=True
 MovieSceneKeyStructType_0.Key=True
 Widget.Layout=True
@@ -1402,9 +1399,6 @@ BP_ObjectiveManager_C.TransformCommon=True
 BP_Key_C.TransformCommon=True
 BP_Key_C.LOD=True
 BP_Key_C.Cooking=True
-BP_GameFlowManager_C.Game Flow Manager =True
-BP_ObjectiveManager_C.Objective Manager =True
-BP_ObjectiveManager_C.ObjectiveManager =True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
