--- a/TP/TP_LattardMathis/Config/DefaultInput.ini
+++ b/TP/TP_LattardMathis/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=A)
 +ActionMappings=(ActionName="GravityGun_Grab",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="GravityGun_Throw",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
++ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="Move_Forward",Scale=1.000000,Key=Z)
 +AxisMappings=(AxisName="Move_Forward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="Move_Right",Scale=1.000000,Key=D)
