--- a/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TP/TP_LattardMathis/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -269,7 +269,7 @@ BP_Sky_Sphere_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.Textu
 BP_TriggerBase_C=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,
 BoxComponent=BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,
 BP_TriggerPlayerBase_C=
-BP_HealthZone_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,EdGraph.Inputs.InputArgument2,
+BP_HealthZone_C=EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,EdGraph.Inputs.InputArgument2,StaticMeshActor.Rendering.TextureStreaming,
 UserConstructionScript_3=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,
 UserConstructionScript=BP_Player_C.Physics.ConstraintsGroup,BP_Player_C.Rendering.TextureStreaming,BP_Player_C.Rendering.LOD,BP_Player_C.Rendering.RayTracing,EdGraph.Inputs.InputArgument0,EdGraph.Inputs.InputArgument1,BP_Player_C.Collision.Collision,StaticMeshActor.Rendering.TextureStreaming,PropertyWrapper.DefaultValueCategory.None,K2Node_BreakStruct.PinOptions.ShowPinForProperties,EdGraph.Inputs.InputArgument2,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,K2Node_FunctionEntry.Inputs.InputArgument0,
 StaticMeshActor=StaticMeshActor.Rendering.TextureStreaming,
@@ -323,13 +323,8 @@ LastLevel=/Game/Partie_Individuelle/Level/Level_Demo_Mathis
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Player/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Partie_Individuelle/LDIs/Bp_JumpAdd.Bp_JumpAdd
-OpenAssetsAtExit=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase.BP_TriggerPlayerBase
 OpenAssetsAtExit=/Game/LDis/Triggers/BP_Key.BP_Key
-OpenAssetsAtExit=/Game/_Core/_Widgets/WBP_GameFlowUI.WBP_GameFlowUI
-OpenAssetsAtExit=/Game/_Core/BP_StartPosition.BP_StartPosition
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -1326,6 +1321,7 @@ BP_GameFlowManager_C.Game Flow Manager=True
 BP_GameFlowManager_C.Game Flow Manager=True
 BP_GameFlowManager_C.Game Flow Manager=True
 BP_GameFlowManager_C.Game Flow Manager=True
+BP_GameFlowManager_C.Game Flow Manager=True
 WBP_GameFlowUI_C.Default=True
 WBP_GameFlowUI_C.Designer=True
 WBP_GameFlowUI_C.Layout=True
@@ -1563,7 +1559,30 @@ Bp_JumpAdd_C.Actor=True
 Bp_JumpAdd_C.Input=True
 Bp_JumpAdd_C.WorldPartition=True
 Bp_JumpAdd_C.HLOD=True
-BP_GameFlowManager_C.Game Flow Manager =True
+Bp_JumpAdd_C.TransformCommon=True
+Bp_JumpAdd_C.Default=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.HLOD=True
+SkyLight.Actor=True
+AtmosphericFog.TransformCommon=True
+AtmosphericFog.Atmosphere=True
+AtmosphericFog.Sun=True
+AtmosphericFog.Ground=True
+AtmosphericFog.Rendering=True
+AtmosphericFog.Tags=True
+AtmosphericFog.Activation=True
+AtmosphericFog.Cooking=True
+AtmosphericFog.Replication=True
+AtmosphericFog.HLOD=True
+AtmosphericFog.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1713,7 +1732,7 @@ MagicLeapARPinSettings="\"Object.ARPin.OnUpdatedEventTriggerDelta\" "
 NiagaraSettings="\"Object.Renderer.ComponentRendererWarningsPerClass\" "
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ShapeComponent=
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -1816,7 +1835,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Partie_Individuelle/Level
+ContentBrowserTab1.SelectedPaths=/Game/LDis/Triggers
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1826,26 +1845,26 @@ SequencerAssetPicker.ThumbnailSize=2
 SequencerAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/_Core/BP_StartPosition
-MRUItem1=/Game/Partie_Individuelle/Level/Level_Demo_Mathis
-MRUItem2=/Game/_Core/_Widgets/WBP_GameFlowUI
-MRUItem3=/Game/Levels/bootstrap
-MRUItem4=/Game/_Core/BP_GameFlowManager
-MRUItem5=/Game/Partie_Individuelle/Level/Level_Demo_Mathi
-MRUItem6=/Game/LDis/Triggers/BP_Key
-MRUItem7=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase
-MRUItem8=/Game/Partie_Individuelle/LDIs/Bp_JumpAdd
-MRUItem9=/Game/Player/BP_PlayerController
-MRUItem10=/Game/Player/BP_Player
-MRUItem11=/Game/__StarterContent/Architecture/Déco_Wave
-MRUItem12=/Game/Levels/Level_01
-MRUItem13=/Game/LDis/Triggers/BP_Collectible_Health
-MRUItem14=/Game/Interfaces/IInteractible
-MRUItem15=/Game/LDis/Triggers/BP_Door
-MRUItem16=/Game/LDis/Triggers/BP_Switch
-MRUItem17=/Game/Levels/Level_Rendu_General
-MRUItem18=/Game/LDis/Triggers/_Base/Finteraction
-MRUItem19=/Game/_Core/BP_GameMode
+MRUItem0=/Game/Partie_Individuelle/Level/Level_Demo_Mathis
+MRUItem1=/Game/Levels/bootstrap
+MRUItem2=/Game/LDis/Triggers/BP_Key
+MRUItem3=/Game/LDis/Triggers/_Data/Materials/M_CollectibleKey
+MRUItem4=/Game/Partie_Individuelle/LDIs/Bp_JumpAdd
+MRUItem5=/Game/_Core/BP_StartPosition
+MRUItem6=/Game/_Core/_Widgets/WBP_GameFlowUI
+MRUItem7=/Game/_Core/BP_GameFlowManager
+MRUItem8=/Game/Partie_Individuelle/Level/Level_Demo_Mathi
+MRUItem9=/Game/LDis/Triggers/_Base/BP_TriggerPlayerBase
+MRUItem10=/Game/Player/BP_PlayerController
+MRUItem11=/Game/Player/BP_Player
+MRUItem12=/Game/__StarterContent/Architecture/Déco_Wave
+MRUItem13=/Game/Levels/Level_01
+MRUItem14=/Game/LDis/Triggers/BP_Collectible_Health
+MRUItem15=/Game/Interfaces/IInteractible
+MRUItem16=/Game/LDis/Triggers/BP_Door
+MRUItem17=/Game/LDis/Triggers/BP_Switch
+MRUItem18=/Game/Levels/Level_Rendu_General
+MRUItem19=/Game/LDis/Triggers/_Base/Finteraction
 
 [AssetEditorToolkitTabLocation]
 /Game/_Core/BP_GameMode.BP_GameMode=1
@@ -1933,6 +1952,9 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/LDis/Triggers/BP_HealthZone.BP_HealthZone;
+RecentlyPlaced=/Game/__StarterContent/Architecture/Wall_400x400.Wall_400x400;
+RecentlyPlaced=/Game/__StarterContent/Architecture/Wall_500x500.Wall_500x500;
 RecentlyPlaced=/Game/Partie_Individuelle/LDIs/Bp_JumpAdd.Bp_JumpAdd;
 RecentlyPlaced=/Game/__StarterContent/Architecture/Server.Server;
 RecentlyPlaced=/Game/__StarterContent/Architecture/screen_serv_Screen_Armature.screen_serv_Screen_Armature;
@@ -1950,9 +1972,6 @@ RecentlyPlaced=/Game/LDis/Triggers/BP_Collectible_Health.BP_Collectible_Health;
 RecentlyPlaced=/Game/_Core/BP_StartPosition.BP_StartPosition;
 RecentlyPlaced=/Game/_Core/BP_GameFlowManager.BP_GameFlowManager;
 RecentlyPlaced=/Game/Player/BP_Player.BP_Player;
-RecentlyPlaced=/Game/LDis/GravityTargets/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
-RecentlyPlaced=/Game/LDis/GravityTargets/BP_Explosion.BP_Explosion;
-RecentlyPlaced=/Game/LDis/GravityTargets/_Base/BP_GravityTargetBase.BP_GravityTargetBase;
 
 [RootWindow]
 ScreenPosition=X=-1696.000 Y=136.000
@@ -2881,7 +2900,6 @@ bWheelMode=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [MaterialEditor]
 PrimType=1
@@ -2966,6 +2984,7 @@ UserDefinedEnum.Enumerators=True
 StaticMeshComponent.Physics=True
 FbxImportUI.Mesh=True
 FbxImportUI.Material=True
+BoxComponent.Physics=True
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -3142,5 +3161,5 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
